--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="css/swiper-bundle.min.css" rel="stylesheet" type="text/css">
   <script src="js/html5shiv.min.js"></script>
   <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/swiper-bundle.min.js"></script>
+
 
 
 </head>
@@ -262,6 +262,10 @@
         slidesPerGroup: 1,
         loop: true,
         loopFillGroupWithBlank: true,
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
+        },
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
@@ -277,6 +281,10 @@
         spaceBetween: 20,
         slidesPerGroup: 1,
         loop: true,
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
+        },
         loopFillGroupWithBlank: true,
         pagination: {
           el: ".swiper-pagination",
